<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, MonitoringKeberadaan!</string>
    <string name="app_name">Monak</string>
    <string name="pilih_date">Pilih Tanggal</string>
    <string name="tandai_lokasi">Tandai Lokasi</string>
    <string name="pilih_mingguan">Pilih Mingguan</string>
    <string name="set_tolerancy">Set Toleransi</string>
    <string name="monitoring">MONITORING</string>
    <string name="kosong">…</string>
    <string name="ok">OK</string>
    <string name="pilih_waktu">Pilih Waktu</string>
    <string name="m">Meters</string>
    <string name="nol">0</string>
    <string name="sepuluh">10</string>
    <string name="seratus">100</string>
    <string name="meter">m</string>
    <string name="pilih_anak">Pilih Anak</string>
    <string name="cancel">Cancel</string>
    <string name="add_anak">Add Anak</string>
    <string name="nama">nama</string>
    <string name="no_hp">no hp</string>
    <string name="filter">Filter</string>
    <string name="keterangan">Keterangan</string>
    <string name="clear">CLEAR</string>
    <string name="sampai_dengan">sampai dengan : </string>
    <string name="selalu">SELALU</string>
    <string name="pilih_status">Pilih Status</string>
    <string name="id_anak">ID Anak</string>
    <string name="id_monitoring">ID Monitoring</string>
    <string name="detail">detail</string>
    <string name="log">lihat historis</string>
    <string name="track">track lokasi</string>
    <string name="edit">registrasi</string>
    <string name="delete">hapus</string>
    <string name="pelanggaran">pelanggaran</string>
    <string name="mulai_tanggal">mulai tanggal</string>
    <string name="sampai_tanggal">sampai tanggal</string>
    <string name="nama_anak">nama anak</string>
    <string name="seharusnya">Seharusnya</string>
    <string name="set_detik_monitoring">Detik Monitoring</string>
    <string name="set_meter_monitoring">Meter Monitoring</string>
    <string name="set_detik_tracking">Detik Tracking</string>
    <string name="max_log">Max Log</string>
    <string name="view_all_monitoring">View All Monitoring</string>
    <string name="set_tipe_koneksi">Set Tipe Koneksi</string>
    <string name="view_all_lokasi">View All Lokasi</string>
    <string name="clear_all_lokasi">Clear All Lokasi</string>
    
    <string name="clear_all_monitoring">Clear All Monitoring</string>
    <string name="clear_all_pelanggaran">Clear All Pelanggaran</string>
    <string name="clear_all_anak">Clear All Anak</string>
    <string name="registrasi_anak">Registrasi Anak</string>
    <string name="monitoring_aktif">Monitoring sedang Aktif</string>
    <string name="monitoring_deaktif">Monitoring sedang tidak Aktif</string>
    <string name="track_start">Tracking sedang Aktif</string>
    <string name="track_stop">Tracking sedang tidak Aktif</string>
    <string name="setting">SETTING</string>
    <string name="start">start</string>
    <string name="stop">stop</string>
    <string name="sms">sms</string>
</resources>
