<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/multipleEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit" />

    <Button
        android:id="@+id/multipleDelete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete" />
    
     <Button
        android:id="@+id/multipleLog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/log" />
     
      <Button
        android:id="@+id/multipleTrack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/track" />
    
</LinearLayout>