<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
        android:id="@+id/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/daftarMonitoringText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:paddingLeft="5dip"
            android:text="@string/kosong"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </LinearLayout>
     <LinearLayout
   	    android:layout_width="match_parent"
   	    android:layout_height="wrap_content" >
    
	   	<LinearLayout
	   	    android:id="@+id/daftarMonitoringStatusAktif"
	   	    android:layout_width="match_parent"
	   	    android:layout_height="wrap_content" >
	
	   	    <TextView
	   	        android:id="@+id/daftarMonitoringTextStatusAktif"
	   	        android:layout_width="0dp"
	   	        android:layout_height="wrap_content"
	   	        android:layout_weight="2"
	   	        android:paddingLeft="5dip"
	   	        android:text="@string/monitoring_aktif"
	   	        android:textAppearance="?android:attr/textAppearanceSmall" />
	
	   	    <Button
	   	        android:id="@+id/daftarMonitoringButtonStop"
	   	        android:layout_width="0dp"
	   	        android:layout_height="wrap_content"
	   	        android:layout_weight="1"
	   	        android:text="@string/stop" />
	   	</LinearLayout>
	   	<LinearLayout
	   	    android:id="@+id/daftarMonitoringStatusDeaktif"
	   	    android:layout_width="match_parent"
	   	    android:visibility="gone"
	   	    android:layout_height="wrap_content" >
	
	   	    <TextView
	   	        android:id="@+id/daftarMonitoringTextStatusDeaktif"
	   	        android:layout_width="0dp"
	   	        android:layout_height="wrap_content"
	   	        android:layout_weight="2"
	   	        android:paddingLeft="5dip"
	   	        android:text="@string/monitoring_deaktif"
	   	        android:textAppearance="?android:attr/textAppearanceSmall" />
	
	   	    <Button
	   	        android:id="@+id/daftarMonitoringButtonStart"
	   	        android:layout_width="0dp"
	   	        android:layout_height="wrap_content"
	   	        android:layout_weight="1"
	   	        android:text="@string/start" />
	   	</LinearLayout>
	
    </LinearLayout>

</LinearLayout>