<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent" 
  android:orientation="vertical">
    <LinearLayout 
    	android:layout_width="match_parent" 
    	android:id="@+id/linearLayout1" 
    	android:layout_height="wrap_content">
        <LinearLayout 
        	android:layout_width="wrap_content" 
        	android:id="@+id/linearLayout3" 
        	android:layout_height="match_parent" 
        	android:orientation="vertical">
            <EditText 
            	android:layout_height="wrap_content" 
            	android:layout_width="match_parent" 
            	android:text="@string/seratus" 
            	android:numeric="integer" 
            	android:id="@+id/monitoringToleransiTextNumber">
            </EditText>
        </LinearLayout>
        
        <LinearLayout 
        	android:layout_width="wrap_content" 
        	android:id="@+id/linearLayout2" 
        	android:layout_height="match_parent" 
        	android:gravity="center">
            <TextView 
            	android:layout_height="wrap_content" 
            	android:layout_width="wrap_content" 
            	android:id="@+id/textView1" 
            	android:textSize="25dip" 
            	android:text="@string/meter">
            </TextView>
        </LinearLayout>
    </LinearLayout>
    <Button 
    	android:layout_height="wrap_content" 
    	android:layout_width="wrap_content" 
    	android:text="@string/ok" 
    	android:id="@+id/monitoringToleransiOk">
    </Button>
</LinearLayout>
