<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:id="@+id/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/daftarAnakItemName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:paddingLeft="5dip"
            android:text="@string/kosong"            
            android:textAppearance="?android:attr/textAppearanceLarge"/>

			
				<View
				    android:layout_width="1dip"
				    android:layout_height="match_parent"
				    android:background="#00000000" />
        <TextView
            android:id="@+id/daftarAnakItemPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/kosong"
            android:paddingLeft="5dip"          
            android:textAppearance="?android:attr/textAppearanceLarge"/>

			
				<View
				    android:layout_width="1dip"
				    android:layout_height="match_parent"
				    android:background="#00000000" />

        <TextView
            android:id="@+id/daftarAnakItemPelanggaran"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:text="@string/kosong"
            android:paddingLeft="5dip"            
            android:textAppearance="?android:attr/textAppearanceLarge"/>


    </LinearLayout>
    <LinearLayout
   	    android:layout_width="match_parent"
   	    android:layout_height="wrap_content" >
    
	   	<LinearLayout
	   	    android:id="@+id/daftarAnakTrackStart"
	   	    android:layout_width="match_parent"
	   	    android:layout_height="wrap_content" >
	
	   	    <TextView
	   	        android:id="@+id/daftarAnakTextTrackStart"
	   	        android:layout_width="0dp"
	   	        android:layout_height="wrap_content"
	   	        android:layout_weight="2"
	   	        android:paddingLeft="5dip"
	   	        android:text="@string/track_start"
	   	        android:textAppearance="?android:attr/textAppearanceSmall" />
	
	   	    <Button
	   	        android:id="@+id/daftarAnakButtonStopTrack"
	   	        android:layout_width="0dp"
	   	        android:layout_height="wrap_content"
	   	        android:layout_weight="1"
	   	        android:text="@string/stop" />
	   	</LinearLayout>
	   	<LinearLayout
	   	    android:id="@+id/daftarAnakTrackStop"
	   	    android:layout_width="match_parent"
	   	    android:visibility="gone"
	   	    android:layout_height="wrap_content" >
	
	   	    <TextView
	   	        android:id="@+id/daftarAnakTextTrackStop"
	   	        android:layout_width="0dp"
	   	        android:layout_height="wrap_content"
	   	        android:layout_weight="2"
	   	        android:paddingLeft="5dip"
	   	        android:text="@string/track_stop"
	   	        android:textAppearance="?android:attr/textAppearanceSmall" />
	
	   	    <Button
	   	        android:id="@+id/daftarAnakButtonStartTrack"
	   	        android:layout_width="0dp"
	   	        android:layout_height="wrap_content"
	   	        android:layout_weight="1"
	   	        android:text="@string/start" />
	   	</LinearLayout>
	
    </LinearLayout>
    
    
</LinearLayout>