<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:background="@drawable/back_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout
            
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dip"
            android:layout_marginTop="5dip"
            android:gravity="center" >
            
            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dip"
                android:textAppearance="?android:attr/textAppearanceLarge" 
                android:text="@string/setting" 
                android:textStyle="bold"/>

        </LinearLayout>
        <ScrollView
		android:layout_width="match_parent"
		android:layout_height="match_parent">
	        <LinearLayout
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:orientation="vertical" >

	            <LinearLayout
	                android:id="@+id/LinearLayout01"
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content"
	                android:background="@drawable/back_menu" >

	                <TextView
	                    android:id="@+id/TextView07"
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:padding="10dip"
	                    android:text="@string/set_detik_monitoring"
	                    android:textAppearance="?android:attr/textAppearanceLarge" />

	                <ImageView
	                    android:id="@+id/ImageView03"
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:paddingTop="10dip"
	                    android:src="@drawable/enter" />

	                <TextView
	                    android:id="@+id/adminDetikMonitoring"
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:paddingLeft="5dip"
	                    android:text="@string/kosong" />
	            </LinearLayout>
	            

	            <LinearLayout
	                android:id="@+id/monitoringButtonAnak"
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content"
	                android:background="@drawable/back_menu" >

	                <TextView
	                    android:id="@+id/TextView04"
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:padding="10dip"
	                    android:text="@string/set_meter_monitoring"
	                    android:textAppearance="?android:attr/textAppearanceLarge" />

	                <ImageView
	                    android:id="@+id/ImageView01"
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:paddingTop="10dip"
	                    android:src="@drawable/enter" />

	                <TextView
	                    android:id="@+id/adminMeterMonitoring"
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:paddingLeft="5dip"
	                    android:text="@string/kosong" />
	            </LinearLayout>

	            <LinearLayout
	                android:id="@+id/monitoringButtonStatus"
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content"
	                android:background="@drawable/back_menu" >

	                <TextView
	                    android:id="@+id/TextView05"
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:padding="10dip"
	                    android:text="@string/set_detik_tracking"
	                    android:textAppearance="?android:attr/textAppearanceLarge" />

	                <ImageView
	                    android:id="@+id/ImageView02"
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:paddingTop="10dip"
	                    android:src="@drawable/enter" />

	                <TextView
	                    android:id="@+id/adminDetikTracking"
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:paddingLeft="5dip" 
	                    android:text="@string/kosong"/>
	            </LinearLayout>

		       
		        <LinearLayout
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content" 
		            android:background="@drawable/back_menu" 
		            android:id="@+id/monitoringButtonWaktu">
		
		            <TextView
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:padding="10dip"
		                android:text="@string/max_log"
		                android:textAppearance="?android:attr/textAppearanceLarge" />
		
		            <ImageView
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:src="@drawable/enter" 
		                android:paddingTop="10dip"/>

		                
		            <TextView 
		            	android:paddingLeft="5dip"
		             	android:layout_width="wrap_content" 
		             	android:layout_height="wrap_content" 
		             	android:id="@+id/adminMaxLog" 
		             	android:text="@string/kosong"></TextView>
		
		        </LinearLayout>
		        
		         <LinearLayout
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content" 
		            android:background="@drawable/back_menu_green" 
		            android:id="@+id/adminButtonViewMonitoring"
		            android:gravity="center_horizontal">
		
		            <TextView
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:padding="10dip"
		                android:text="@string/view_all_monitoring"
		                android:textAppearance="?android:attr/textAppearanceLarge" />
		
		
		        </LinearLayout>

		         <LinearLayout
		             android:id="@+id/adminButtonViewLokasi"
		             android:layout_width="match_parent"
		             android:layout_height="wrap_content"
		             android:background="@drawable/back_menu_green"
		             android:gravity="center_horizontal" >

		             <TextView
		                 android:layout_width="wrap_content"
		                 android:layout_height="wrap_content"
		                 android:padding="10dip"
		                 android:text="@string/view_all_lokasi"
		                 android:textAppearance="?android:attr/textAppearanceLarge" />
		         </LinearLayout>
		         
		     
		         
		         <LinearLayout
		             android:id="@+id/adminButtonClearMonitoring"
		             android:layout_width="match_parent"
		             android:layout_height="wrap_content"
		             android:background="@drawable/back_menu_green"
		             android:gravity="center_horizontal" >

		             <TextView
		                 android:layout_width="wrap_content"
		                 android:layout_height="wrap_content"
		                 android:padding="10dip"
		                 android:text="@string/clear_all_monitoring"
		                 android:textAppearance="?android:attr/textAppearanceLarge" />
		         </LinearLayout>
		         
		         <LinearLayout
		             android:id="@+id/adminButtonClearLokasi"
		             android:layout_width="match_parent"
		             android:layout_height="wrap_content"
		             android:background="@drawable/back_menu_green"
		             android:gravity="center_horizontal" >

		             <TextView
		                 android:layout_width="wrap_content"
		                 android:layout_height="wrap_content"
		                 android:padding="10dip"
		                 android:text="@string/clear_all_lokasi"
		                 android:textAppearance="?android:attr/textAppearanceLarge" />
		         </LinearLayout>
		         
		          <LinearLayout
		             android:id="@+id/adminButtonClearPelanggaran"
		             android:layout_width="match_parent"
		             android:layout_height="wrap_content"
		             android:background="@drawable/back_menu_green"
		             android:gravity="center_horizontal" >

		             <TextView
		                 android:layout_width="wrap_content"
		                 android:layout_height="wrap_content"
		                 android:padding="10dip"
		                 android:text="@string/clear_all_pelanggaran"
		                 android:textAppearance="?android:attr/textAppearanceLarge" />
		         </LinearLayout>
		      
        	</LinearLayout>

   		</ScrollView>
    </LinearLayout>

   

</FrameLayout>
