<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" android:background="@drawable/back_main">

	
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" 
		android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dip"
            android:layout_marginTop="5dip"
            android:gravity="center" >
            <ImageView 
            
        		android:layout_width="30dip"
        	 	android:layout_height="30dip"
            	android:id="@+id/imageView2" 
            	android:src="@drawable/add"></ImageView>
            
            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dip"
                android:textAppearance="?android:attr/textAppearanceLarge" 
                android:text="@string/monitoring" android:textStyle="bold"/>

        </LinearLayout>
        <ScrollView
		android:layout_width="match_parent"
		android:layout_height="match_parent">
	        <LinearLayout
		        android:layout_width="match_parent"
		        android:layout_height="match_parent"
		        android:orientation="vertical" >

		        <LinearLayout
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content" android:background="@drawable/back_menu" android:id="@+id/monitoringButtonAnak">
		
		            <TextView
		                android:id="@+id/textView2"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:padding="10dip"
		                android:text="Pilih Anak"
		                android:textAppearance="?android:attr/textAppearanceLarge" />
		
		            <ImageView
		                android:id="@+id/imageView1"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:src="@drawable/enter" 
		                android:paddingTop="10dip" />
		
		        </LinearLayout>
		        <LinearLayout
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content" 
		            android:background="@drawable/back_menu" android:id="@+id/monitoringButtonWaktu">
		
		            <TextView
		                android:id="@+id/textView2"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:padding="10dip"
		                android:text="Pilih Waktu"
		                android:textAppearance="?android:attr/textAppearanceLarge" />
		
		            <ImageView
		                android:id="@+id/imageView1"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:src="@drawable/enter" 
		                android:paddingTop="10dip"/>
		
		        </LinearLayout>
		        <LinearLayout
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content" android:background="@drawable/back_menu" android:id="@+id/monitoringButtonMingguan">
		
		            <TextView
		                android:id="@+id/textView2"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:padding="10dip"
		                android:textAppearance="?android:attr/textAppearanceLarge" android:text="@string/pilih_mingguan"/>
		
		            <ImageView
		                android:id="@+id/imageView1"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:src="@drawable/enter" 
		                android:paddingTop="10dip"/>
		
		        </LinearLayout>
		
		        <LinearLayout
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content" android:background="@drawable/back_menu" android:id="@+id/MonitoringButtonTanggal">
		
		            <TextView
		                android:id="@+id/TextView01"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:padding="10dip"
		                android:textAppearance="?android:attr/textAppearanceLarge" 
		                android:text="@string/pilih_date"/>
		
		            <ImageView
		                android:id="@+id/ImageView01"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:paddingTop="10dip"
		                android:src="@drawable/enter" />
		        </LinearLayout>
		        <LinearLayout 
		        	android:layout_height="wrap_content" 
		        	android:layout_width="match_parent" 
		        	android:background="@drawable/back_menu" android:id="@+id/monitoringButtonLokasi">
		            <TextView 
		            	android:padding="10dip" 
		            	android:textAppearance="?android:attr/textAppearanceLarge" 
		            	android:id="@+id/TextView02" 
		            	android:layout_width="wrap_content" 
		            	android:layout_height="wrap_content" 
		            	android:text="@string/tandai_lokasi"></TextView>
		            <ImageView 
		            	android:layout_width="wrap_content" 
		            	android:layout_height="wrap_content" 
		            	android:id="@+id/ImageView02" 
		            	android:src="@drawable/enter" 
		            	android:paddingTop="10dip"></ImageView>
		        </LinearLayout>
		        <LinearLayout 
		        	android:layout_height="wrap_content" 
		        	android:layout_width="match_parent" android:background="@drawable/back_menu" android:id="@+id/monitoringButtonToleransi">
		            <TextView 
		            	android:padding="10dip" 
		            	android:textAppearance="?android:attr/textAppearanceLarge" 
		            	android:layout_height="wrap_content" 
		            	android:layout_width="wrap_content" 
		            	android:id="@+id/TextView03" 
		            	android:text="@string/set_tolerancy"></TextView>
		            <ImageView 
		            	android:layout_height="wrap_content" 
		            	android:layout_width="wrap_content" 
		            	android:id="@+id/ImageView03" 
		            	android:src="@drawable/enter" 
		            	android:paddingTop="10dip"></ImageView>
		        </LinearLayout>
        	</LinearLayout>

   		</ScrollView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:gravity="center" 
        android:background="#aa000000">

	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:gravity="center" 
	        android:paddingTop = "5dip"
	        android:paddingBottom = "5dip"
	        
	        android:paddingLeft = "30dip"
	        android:paddingRight = "30dip"
	        android:background="#aa000000">
	        <Button
	             android:layout_width="match_parent"
	             android:layout_height="wrap_content"
	             android:text="Cancel" 
	             android:layout_weight="1" android:id="@+id/monitoringButtonCancel"/>
	
	        <Button
	             android:layout_width="match_parent"
	             android:layout_height="wrap_content"
	             android:text="OK" 
	             android:layout_weight="1" android:id="@+id/monitoringButtonOk"/>
	    </LinearLayout>

    </LinearLayout>

</FrameLayout>
